# BenchmarkingProofAssistants

./: .gitignore  CONTRIBUTING.md  README.md  cabal.project  cabal.project.profile  flake.nix  hie.yaml
.github/workflows/: static.yml
Paper/: panbench.tex
app/site/: panbench-site.cabal
app/site/app/: Main.hs
artifacts/: index.html  linear.html  telescope.html
lib/generators/: panbench-generators.cabal
lib/generators/src/Panbench/: Generator.hs
lib/generators/test/golden/: Main.hs
lib/generators/test/snapshot/: ConversionAddition.agda  ConversionAddition.idr  ConversionAddition.lean  ConversionAddition.v  DatatypeParameters.agda  DatatypeParameters.lean  IdChain.agda  IdChain.idr  IdChain.lean  IdChain.v  IdChainLambda.agda  IdChainLambda.idr  IdChainLambda.lean  IdChainLambda.v  LargeDependentRecord.agda  LargeDependentRecord.lean  LargeDependentRecord.v  LargeIndexedDatatype.agda  LargeIndexedDatatype.idr  LargeIndexedDatatype.lean  LargeIndexedParameterisedDatatype.agda  LargeIndexedParameterisedDatatype.lean  LargeLambda.agda  LargeLambda.idr  LargeLambda.lean  LargeLambda.v  LargeSimpleDatatype.agda  LargeSimpleDatatype.lean  LargeSimpleDatatype.v  LargeSimpleRecord.lean  LongDatatypeName.agda  LongDatatypeName.v  LongDefinitionName.agda  LongDefinitionName.lean  LongDefinitionName.v  LongNameDatatype.agda  LongNameDatatype.idr  LongNameDatatype.lean  LongNameDatatype.v  LongNameDatatypeConstructor.agda  (+69 more)
lib/grammar/: panbench-grammar.cabal
lib/grammar/src/: Panbench.hs
lib/grammar/src/Panbench/: Grammar.hs  Pretty.hs
lib/shake/: panbench-shake.cabal
lib/shake/src/Panbench/Shake/: Benchmark.hs  Cabal.hs  Command.hs  File.hs  HTML.hs  Lang.hs  Matrix.hs  Path.hs  Range.hs  Store.hs
lib/shake/src/Panbench/Shake/Lang/: Agda.hs  Idris.hs  Lean.hs  Rocq.hs
lib/shake/src/Panbench/Shake/Plot/: Pgf.hs  Vega.hs
panbench/: hie.yaml
panbench/generators/: panbench-generators.cabal
panbench/generators/src/Panbench/: Generator.hs
panbench/generators/test/golden/: Main.hs
panbench/generators/test/snapshot/: ChainDefFields_NonDependentRecordModule.agda  ChainDefFields_NonDependentRecordModule.v  ChainDef_DependentRecordModule.agda  ChainDef_DependentRecordModule.idr  ChainDef_DependentRecordModule.lean  ChainDef_DependentRecordModule.v  Constructors_Datatypes.lean  DatatypeParameters.idr  DatatypeParameters.lean  DatatypeParameters.v  Fields_DependentRecordModule.agda  Fields_DependentRecordModule.idr  Fields_DependentRecordModule.lean  Fields_DependentRecordModule.v  Fields_NonDependentRecordModule.agda  Fields_NonDependentRecordModule.lean  Fields_NonDependentRecordModule.v  IdChain.agda  IdChain.idr  IdChain.v  IndiciesConstructors_Datatypes.agda  LargeDependentRecord.idr  LargeDependentRecord.v  LargeLambda.idr  (+61 more)
panbench/grammar/: panbench-grammar.cabal
panbench/grammar/src/Panbench/: Grammar.hs  Prelude.hs  Pretty.hs
panbench/grammar/src/Panbench/Grammar/: Agda.hs  Cell.hs  Idris.hs  Lean.hs  Rocq.hs
panbench/shake/cbits/: benchmark.c
panbench/site/: panbench-site.cabal
panbench/site/app/: Main.hs
panbench/site/cbits/: benchmark.c
panbench/site/include/: benchmark.h
paper/: Makefile  panbench.sty  panbench.tex  references.bib  todos.org
paper/pgfs/: all-pgfs.tex
paper/pgfs/ConversionAddition/: rss.tex  system.tex  user.tex
paper/pgfs/DatatypeParameters/: rss.tex  system.tex  user.tex
paper/pgfs/Empty/: rss.tex  system.tex  user.tex
paper/pgfs/IdChain/: rss.tex  system.tex  user.tex
paper/pgfs/IdChainLambda/: rss.tex  system.tex  user.tex
paper/pgfs/LargeDependentRecord/: rss.tex  system.tex  user.tex
paper/pgfs/LargeIndexedDatatype/: rss.tex  system.tex  user.tex
paper/pgfs/LargeIndexedParameterisedDatatype/: rss.tex  system.tex  user.tex
paper/pgfs/LargeLambda/: rss.tex  system.tex  user.tex
paper/pgfs/LargeSimpleDatatype/: rss.tex  system.tex  user.tex
paper/pgfs/LargeSimpleRecord/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameDatatype/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameDatatypeConstructor/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameDefinition/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameDefinitionLhs/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameDefinitionRhs/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameLambda/: rss.tex  system.tex  user.tex
paper/pgfs/LongNamePi/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameRecord/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameRecordConstructor/: rss.tex  system.tex  user.tex
paper/pgfs/LongNameRecordField/: rss.tex  system.tex  user.tex
paper/pgfs/ManyImplicits/: rss.tex  system.tex  user.tex
paper/pgfs/NestedLet/: rss.tex  system.tex  user.tex
paper/pgfs/NestedLetAdditions/: rss.tex  system.tex  user.tex
paper/pgfs/NestedLetFunctions/: rss.tex  system.tex  user.tex
paper/pgfs/NestedLetXor/: rss.tex  system.tex  user.tex
paper/pgfs/NestedLetXors/: system.tex
paper/pgfs/Newlines/: rss.tex  system.tex  user.tex
paper/pgfs/Parens/: rss.tex  system.tex  user.tex
paper/pgfs/Postulates/: rss.tex  system.tex  user.tex
paper/pgfs/RecordParameters/: rss.tex  system.tex  user.tex
paper/pgfs/RecordTelescope/: rss.tex  system.tex  user.tex
paper/pgfs/SequentialDefinitions/: rss.tex  system.tex  user.tex
paper/pgfs/SequentialDependentRecords/: rss.tex  system.tex  user.tex
paper/pgfs/SequentialSimpleRecords/: rss.tex  system.tex  user.tex
paper/pgfs/SimpleDataDefinitions/: rss.tex  system.tex  user.tex
(+76 files in other folders)
