cabal-version:      3.0
name:               panbench-shake
version:            0.1.0.0
synopsis:           Shake utilities for working with panbench.
license:            MIT
author:             Reed Mullanix
maintainer:         mullanir@mcmaster.ca
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-name-shadowing

common extensions
    default-extensions:
        BangPatterns
        BlockArguments
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        NoMonoLocalBinds
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators

library
    import:           warnings, extensions
    exposed-modules:
        Panbench.Shake.AllCores
        Panbench.Shake.Benchmark
        Panbench.Shake.Cabal
        Panbench.Shake.Chez
        Panbench.Shake.Command
        Panbench.Shake.Dev
        Panbench.Shake.Digest
        Panbench.Shake.Env
        Panbench.Shake.File
        Panbench.Shake.Git
        Panbench.Shake.HTML
        Panbench.Shake.Lang
        Panbench.Shake.Lang.Agda
        Panbench.Shake.Lang.Idris
        Panbench.Shake.Lang.Lean
        Panbench.Shake.Lang.Rocq
        Panbench.Shake.Make
        Panbench.Shake.Matrix
        Panbench.Shake.Opam
        Panbench.Shake.Path
        Panbench.Shake.Plot.Pgf
        Panbench.Shake.Plot.Vega
        Panbench.Shake.Range
        Panbench.Shake.Store
    build-depends:
        base >=4.20.0.0,
        aeson >= 2.2,
        binary >= 0.8,
        blaze-html >= 0.9,
        bytestring >= 0.12,
        containers >= 0.6,
        cryptohash-sha256 >= 0.11,
        data-default >= 0.8,
        deepseq >= 1.5,
        directory >= 1.3,
        filepath >= 1.5,
        file-io >= 0.1.5,
        hvega >= 0.12,
        os-string >= 2,
        process >= 1.6.26,
        shake >= 0.19,
        text >= 2.1 && < 3.0,
        time >= 1.12,
        utf8-string >= 1,
        template-haskell,
        panbench-generators,
        panbench-grammar,
    hs-source-dirs:
        src
    c-sources:
        cbits/benchmark.c
    cc-options:
        -Wall -Werror
    include-dirs:
        include
    install-includes:
        benchmark.h
    default-language: Haskell2010
