cabal-version:      3.0
name:               panbench-grammar
version:            0.2.3.0
synopsis:           A generic proof-assistant benchmarking framework.
license:            MIT
author:             Zainab Abdulsada, Esha Pisharody, Emma Willson, Grace Croome, Marie Hollington, Proyetei Akanda, Jacques Carette, Reed Mullanix

maintainer:         carette@mcmaster.ca
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-top-binds

common extensions
     default-extensions:
       BlockArguments,
       DeriveAnyClass,
       DeriveGeneric,
       DerivingStrategies,
       GeneralizedNewtypeDeriving,
       ImportQualifiedPost,
       LambdaCase,
       OverloadedStrings

library
    import: warnings, extensions
    exposed-modules:  
        Panbench.Data.List.Bwd,
        Panbench.Grammar,
        Panbench.Grammar.Agda,
        Panbench.Grammar.Cell,
        Panbench.Grammar.Rocq,
        Panbench.Grammar.Idris,
        Panbench.Grammar.Lean,
        Panbench.Pretty,
        Panbench,
    build-depends:
        base >= 4.20.0.0,
        aeson >= 2.2,
        binary >= 0.8,
        bytestring >= 0.12,
        containers >= 0.6 && < 0.7,
        data-default >= 0.8,
        deepseq >= 1.4,
        hashable >= 1.4,
        optparse-applicative >= 0.19,
        mtl >= 2.3,
        prettyprinter >=1.7.1 && < 2.0,
        text >= 2.1 && < 3.0,
        transformers >= 0.6,
        utf8-string >= 1,
    hs-source-dirs: src
    default-language: Haskell2010

